WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161118
AX: VoiceOver on iOS ignores aria-checked on menuitemradio and menuitemcheckbox
https://bugs.webkit.org/show_bug.cgi?id=161118
Summary
AX: VoiceOver on iOS ignores aria-checked on menuitemradio and menuitemcheckbox
Nan Wang
Reported
2016-08-23 16:47:44 PDT
VO for macOS speaks "checked" appropriately. iOS does not. <
rdar://problem/27975170
>
Attachments
Patch
(5.14 KB, patch)
2016-08-23 16:50 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
patch
(6.12 KB, patch)
2016-08-24 12:02 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
patch
(6.14 KB, patch)
2016-08-24 14:51 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2016-08-23 16:50:37 PDT
Created
attachment 286806
[details]
Patch
chris fleizach
Comment 2
2016-08-23 17:32:03 PDT
Comment on
attachment 286806
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=286806&action=review
> Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:1250 > + if (m_object->isCheckboxOrRadio() || m_object->isMenuItem()) {
does this also have the toggleTrait? if not, then VO would probably speak "1" as the value instead of off/on
Nan Wang
Comment 3
2016-08-23 18:14:26 PDT
Comment on
attachment 286806
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=286806&action=review
>> Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:1250 >> + if (m_object->isCheckboxOrRadio() || m_object->isMenuItem()) { > > does this also have the toggleTrait? if not, then VO would probably speak "1" as the value instead of off/on
This is same as how we expose the value on Mac. But I can double check for the traits.
chris fleizach
Comment 4
2016-08-23 21:10:28 PDT
Yea iOS is different If we use the 0,1,2 values we need to make sure that object is using the toggle trait (In reply to
comment #3
)
> Comment on
attachment 286806
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=286806&action=review
> > >> Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:1250 > >> + if (m_object->isCheckboxOrRadio() || m_object->isMenuItem()) { > > > > does this also have the toggleTrait? if not, then VO would probably speak "1" as the value instead of off/on > > This is same as how we expose the value on Mac. But I can double check for > the traits.
Nan Wang
Comment 5
2016-08-24 12:02:08 PDT
Created
attachment 286878
[details]
patch Added toggle trait
chris fleizach
Comment 6
2016-08-24 14:42:24 PDT
Comment on
attachment 286878
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=286878&action=review
> Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:1252 > + if (m_object->isCheckboxOrRadio() || m_object->roleValue() == MenuItemCheckboxRole || m_object->roleValue() == MenuItemRadioRole) {
we should put the roleValue into a local variable probably, otherwise looks good
Nan Wang
Comment 7
2016-08-24 14:51:37 PDT
Created
attachment 286895
[details]
patch Update from review
WebKit Commit Bot
Comment 8
2016-08-24 15:27:01 PDT
Comment on
attachment 286895
[details]
patch Clearing flags on attachment: 286895 Committed
r204938
: <
http://trac.webkit.org/changeset/204938
>
WebKit Commit Bot
Comment 9
2016-08-24 15:27:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug