AX: VoiceOver on iOS ignores aria-checked on menuitemradio and menuitemcheckbox https://bugs.webkit.org/show_bug.cgi?id=161118

Reviewed by Chris Fleizach.

Source/WebCore:

Added checkboxOrRadioValue and toggle trait to menuitemradio and menuitemcheckbox.

Test: accessibility/ios-simulator/menuitem-checked.html

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityTraits]):
(-[WebAccessibilityObjectWrapper accessibilityValue]):

LayoutTests:

* accessibility/ios-simulator/menuitem-checked-expected.txt: Added.
* accessibility/ios-simulator/menuitem-checked.html: Added.


Canonical link: https://commits.webkit.org/179321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204938 268f45cc-cd09-0410-ab3c-d52691b4dbfc